--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RegTech - Go from Idea to Incorporated in Minutes</title>
+    <title>ComplianceGo - Go from Idea to Incorporated in Minutes</title>
     <meta name="description" content="Navigate India's complex regulatory maze with AI-powered guidance. From MCA filings to local Thane & Pune permits—we've got you covered." />
-    <meta name="author" content="RegTech" />
+    <meta name="author" content="ComplianceGo" />
   </head>
 
   <body>
